# groove-serpent

./: .flake8  .gitattributes  .gitignore  ARCHITECTURE.md  BROWSER_ACCEPTANCE.md  BUILD_CYCLE_RECEIPT.md  CHANGELOG.md  CONTINUUM_PROJECT_STATE_RECEIPT.md  CONTRIBUTING.md  PUBLIC_RELEASE_COMMIT.json  README.md  SECURITY.md  SUPPORTED_CAPTURES.md  THIRD_PARTY_NOTICES.md  WINDOWS_PORTABLE_ACCEPTANCE_1.0.md  WINDOWS_RELEASE_POLICY.md  package-lock.json  package.json  playwright.config.mjs  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
examples/: README.md  tracklist.json  tracklist.txt
packaging/: python-build-constraints.txt
scripts/: _release_evidence.py  _release_fs.py  accept_n_drive_filesystem.py  build_public_archive.py  build_python_distributions.py  build_windows_portable.py  check_quality.py  create_demo_audio.py  package_windows_portable.py  verify_windows_portable.py
tests/: _release_evidence_fixtures.py  test_agent_skill_contract.py  test_album.py  test_album_identification.py  test_album_identification_catalog.py  test_album_identification_server.py  test_album_migration.py  test_album_publication_builder.py  test_album_publication_catalog.py  test_album_publication_durability.py  test_album_publication_executor.py  test_album_publication_navigation.py  test_album_publication_operations.py  test_album_publication_plan.py  test_album_review_server.py  test_album_workbench.py  test_analysis.py  test_atomic_create.py  test_audacity.py  test_audio_snapshot.py  test_browser_fixture_lifecycle.py  test_build_public_archive.py  test_build_python_distributions.py  test_build_windows_portable.py  (+45 more)
(+93 files in other folders)
