[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "groove-serpent"
version = "0.5.0a1"
description = "A local-first digitization and conservative restoration tool for vinyl collections."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Groove Serpent contributors" }
]
keywords = ["audio", "vinyl", "flac", "aac", "splitter", "ffmpeg"]
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Topic :: Multimedia :: Sound/Audio",
]
dependencies = ["numpy>=1.26"]

[project.urls]
Homepage = "https://github.com/BluntforceRiot/groove-serpent"
Repository = "https://github.com/BluntforceRiot/groove-serpent"
Issues = "https://github.com/BluntforceRiot/groove-serpent/issues"

[dependency-groups]
dev = [
  "flake8==7.3.0",
  "mypy==2.2.0",
  "numpy==2.4.6",
  "pytest==9.1.1",
  "ruff==0.15.21",
]

[project.scripts]
groove-serpent = "groove_serpent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
groove_serpent = ["web/*.html", "web/*.js", "web/*.css"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/groove_serpent"]
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "E501"]
